--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.5.1",
     "jquery": "^3.6.3",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
